[gd_scene load_steps=18 format=3 uid="uid://bq1tkyat0bymw"]

[ext_resource type="Script" path="res://scripts/portal.gd" id="1_4shek"]
[ext_resource type="Shader" path="res://shaders/portal.gdshader" id="2_sig45"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_nhb8l"]
frequency = 0.0391

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_aaoam"]
noise = SubResource("FastNoiseLite_nhb8l")

[sub_resource type="ViewportTexture" id="ViewportTexture_53s85"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kxjsn"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_sig45")
shader_parameter/portal_colour = Color(0.776471, 0, 0, 1)
shader_parameter/scale = 3.0
shader_parameter/texture_albedo = SubResource("ViewportTexture_53s85")
shader_parameter/noise = SubResource("NoiseTexture2D_aaoam")

[sub_resource type="PlaneMesh" id="PlaneMesh_eh4hp"]
size = Vector2(2, 3)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_55u52"]
frequency = 0.0391

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_pddf6"]
noise = SubResource("FastNoiseLite_55u52")

[sub_resource type="ViewportTexture" id="ViewportTexture_ih5ta"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r766a"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("2_sig45")
shader_parameter/portal_colour = Color(0.776471, 0, 0, 0)
shader_parameter/scale = 10.0
shader_parameter/texture_albedo = SubResource("ViewportTexture_ih5ta")
shader_parameter/noise = SubResource("NoiseTexture2D_pddf6")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_72w1i"]
albedo_color = Color(1, 0.207843, 0.0784314, 1)

[sub_resource type="PrismMesh" id="PrismMesh_4ff8p"]
material = SubResource("StandardMaterial3D_72w1i")

[sub_resource type="CylinderMesh" id="CylinderMesh_350q8"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.5

[sub_resource type="BoxShape3D" id="BoxShape3D_oof8s"]
size = Vector3(2, 0.346, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_qxt8h"]
size = Vector3(0.440503, 2.6, 1)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uw2pb"]
height = 2.42599

[node name="portal1" type="Node3D"]
script = ExtResource("1_4shek")
metadata/_edit_group_ = true

[node name="sprite" type="Node3D" parent="."]

[node name="portalMesh" type="MeshInstance3D" parent="sprite"]
transform = Transform3D(-1, 8.74228e-08, 4.37114e-08, -4.37114e-08, 1.91069e-15, -1, -8.74228e-08, -1, 1.91069e-15, 0, 0, 0)
material_override = SubResource("ShaderMaterial_kxjsn")
mesh = SubResource("PlaneMesh_eh4hp")

[node name="portalMesh2" type="MeshInstance3D" parent="sprite"]
transform = Transform3D(-1, 8.74228e-08, 4.37114e-08, -4.37114e-08, 1.91069e-15, -1, -8.74228e-08, -1, 1.91069e-15, 0, 0, 0.143655)
material_override = SubResource("ShaderMaterial_r766a")
mesh = SubResource("PlaneMesh_eh4hp")

[node name="SubViewport" type="SubViewport" parent="."]
msaa_3d = 1
size = Vector2i(1920, 1080)

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/Camera3D"]
transform = Transform3D(1, 1.55839e-22, -3.65072e-30, 0, -8.1562e-08, -1, -8.35188e-23, 1.86592, -4.37114e-08, 0, 0, 0.000337343)
visible = false
mesh = SubResource("PrismMesh_4ff8p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/Camera3D/MeshInstance3D"]
transform = Transform3D(1, 0, 3.82137e-15, 3.82137e-15, 4.37114e-08, -1, 0, 1, 4.37114e-08, 4.87976e-23, -0.313127, -0.631531)
mesh = SubResource("CylinderMesh_350q8")

[node name="frame" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="top" type="CollisionShape3D" parent="frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.44616, 0.4995)
shape = SubResource("BoxShape3D_oof8s")

[node name="top2" type="CollisionShape3D" parent="frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.56365, 0.4995)
shape = SubResource("BoxShape3D_oof8s")

[node name="left" type="CollisionShape3D" parent="frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.790981, 0, 0.4995)
shape = SubResource("BoxShape3D_qxt8h")

[node name="left2" type="CollisionShape3D" parent="frame"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.842001, 0, 0.4995)
shape = SubResource("BoxShape3D_qxt8h")

[node name="objectDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape3D" type="CollisionShape3D" parent="objectDetector"]
shape = SubResource("CapsuleShape3D_uw2pb")

[node name="wallCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00180471, 0.00367844, 0.00408)
target_position = Vector3(0, 0, 1)
collision_mask = 4
hit_from_inside = true

[connection signal="body_entered" from="objectDetector" to="." method="_on_object_detector_body_entered"]
[connection signal="body_exited" from="objectDetector" to="." method="_on_object_detector_body_exited"]
